--- a/src/scss/modules/_icons.scss
+++ b/src/scss/modules/_icons.scss
@@ -2,10 +2,17 @@
   .icon-wrapper {
     margin-bottom: 0.5rem;
     color: gray('500');
+    transition: 0.3s;
   }
 
   .icon-col {
-    margin-bottom: $grid-gutter-width;
+    margin-bottom: $grid-gutter-width + 20px;
+
+    &:hover {
+      .icon-wrapper {
+        color: theme-color('primary');
+      }
+    }
   }
 
   .icon {
