--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -7,6 +7,14 @@
   color: $white;
   font-size: 0.875rem;
   clip-path: url(#wavy-line-1);
+      
+  @include media-breakpoint-down(md) {
+    padding: 90px 0 120px;
+    clip-path: url(#wavy-line-sm-1);
+  }
+  @include media-breakpoint-down(sm) {
+    padding: 60px 0 70px;
+  }
 
   a {
     border-bottom: dashed 1px transparent;
@@ -23,6 +31,10 @@
   hr {
     margin: 1.875rem 0 2.5rem;
     border-top: dashed 1px $white;
+    
+    @include media-breakpoint-down(sm) {
+      margin-top: 0;
+    }
   }
 
   &-col {
@@ -53,6 +65,10 @@
 
   .list-seperator {
     font-size: 1rem;
+  }
+
+  .list-unstyled {
+    margin-bottom: 0;
   }
 }
 
